<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="app_name">My Home</string>
	<string name="location_service_name">My Location Service</string>

    <string name="title_activity_main">My Home</string>
    <string name="title_activity_tvcontrol">TV Control</string>
    <string name="title_activity_pccontrol">PC Control</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_log">Log</string>

    <string name="pref_server_address">Address</string>
    <string name="pref_server_port">Port</string>
    <string name="pref_location_enabled">Enabled</string>
    <string name="pref_location_enabled_desc">If is checked location service will be started.</string>
    <string name="pref_location_sending">Sending</string>
    <string name="pref_location_sending_desc">If is checked it will send location every Period min to set phone number.</string>
    <string name="pref_location_period">Period</string>
    <string name="pref_location_period_desc">Period (in min) to wait before the next check and send location</string>
    <string name="pref_location_phone_number">Phone number</string>
    <string name="pref_location_phone_number_desc">Phone number that will receive GPS location if there is a missed call from him</string>
    <string name="pref_location_sim_serial">Sim card serial number</string>
    <string name="pref_location_sim_serial_desc">Serial number of sim card that is valid</string>

    <string name="homecontrol_layout">Layout</string>
    <string name="homecontrol_connection">Connection</string>

    <string name="pccontrol_screenimage">Screen Image</string>
    <string name="pccontrol_keyboard">Keyboard</string>
    <string name="pccontrol_topc">To PC</string>
    <string name="pccontrol_getscreen">Get Screen</string>
    <string name="pccontrol_getcamera">Get Camera</string>

    <string name="tvcontrol_remotecontrol">Remote Control</string>
    <string name="tvcontrol_movies">Movies</string>
    <string name="tvcontrol_images">Images</string>
    <string name="tvcontrol_prev">Previous</string>
    <string name="tvcontrol_play">Play</string>
    <string name="tvcontrol_pause">Pause</string>
    <string name="tvcontrol_stop">Stop</string>
    <string name="tvcontrol_next">Next</string>

</resources>
